--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -9,24 +9,37 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  image_picker: ^1.1.2  # Add this line
+  flutter_svg: ^2.0.10+1
+  cached_network_image: ^3.4.1
+
+  # Your existing packages
   http: ^1.2.2
   intl: ^0.19.0
-  shared_preferences: ^2.5.3
+
+  # Firebase packages — each on separate line
+  firebase_core: ^3.15.2
+  cloud_firestore: ^5.0.1
+
+  fl_chart: ^1.1.1
+  firebase_auth: ^5.7.0
+  provider: ^6.1.5+1
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
   flutter_lints: ^5.0.0
-  flutter_launcher_icons: "^0.14.4"
+  flutter_launcher_icons: ^0.14.4
 
 flutter_launcher_icons:
   android: "launcher_icon"
   ios: true
-  image_path: "assets/app_icon.png"
-  adaptive_icon_background: "#013220"
-  adaptive_icon_foreground: "assets/app_icon.png"
+  image_path: "assets/icon/icon.png"   # ← your icon file
+  min_sdk_android: 21                  # optional
+  adaptive_icon_background: "#FFFFFF"  # optional - for Android adaptive icon
+  adaptive_icon_foreground: "assets/icon/icon.png"
 
 flutter:
   uses-material-design: true
   assets:
-    - assets/app_icon.png
+    - assets/icon/icon.png
